--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,6 @@
-/* Global styles */
 body {
     margin: 0;
-    display: flex;
-    place-items: center;
     min-width: 320px;
     min-height: 100vh;
+    width: 100%;
 }
